fixed the logo on teams on mobile

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 
 .noshowmobile {
-  display: inline;
+  display: ;
 }
 
 .fab {
